# mars-probe-simulator

./: .coveragerc  .dockerignore  .gitignore  Makefile  README.md  class_index.html  function_index.html  index.html  package-lock.json  package.json  pyproject.toml  status.json  z_257b53c25398f6ee_dependencies_py.html  z_257b53c25398f6ee_router_py.html  z_41f09dac0431399d_check_router_py.html  z_41f09dac0431399d_move_router_py.html  z_41f09dac0431399d_setup_router_py.html  z_448d20596bb9361d_command_py.html  z_448d20596bb9361d_factory_py.html  z_448d20596bb9361d_move_command_py.html  z_448d20596bb9361d_turn_left_command_py.html  z_448d20596bb9361d_turn_right_command_py.html  z_4eed7ad336a4b97f_probe_repository_py.html  z_525f7ea2345a0e41_CommandRunner_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_main_py.html  z_6c0e4b930745278b_Base_py.html  z_6c0e4b930745278b_Grid_py.html  z_6c0e4b930745278b_Probe_py.html  z_7560199055491ebc_grid_py.html  z_7560199055491ebc_probe_py.html  z_8f7e1016f2d37417_config_py.html  z_8f7e1016f2d37417_database_py.html  z_c0f67d75e686303c_check_py.html  z_c0f67d75e686303c_direction_py.html  z_c0f67d75e686303c_move_py.html  z_c0f67d75e686303c_probe_py.html  z_c0f67d75e686303c_setup_py.html  z_c318f3fa19a49f69_check_service_py.html  z_c318f3fa19a49f69_move_service_py.html  (+2 more)
.github/workflows/: ci.yml  deploy-test-report.yml  (+1 more)
.husky/: pre-commit
app/: main.py
app/core/: config.py  context.py  (+7 more)
docker/: docker-compose.observability.yml  docker-compose.yml  prometheus.yml
migrations/: env.py
tests/: conftest.py  utils.py
(+73 files in other folders)
